# snake-rpg-t-dd-d

./: .gitignore  INSTALL.md  README.md  bestiario.md  pyproject.toml  study.md
domain/: bestiario.py
domain/entities/: snake.py
domain/value_objects/: hp.py
snake_rpg_t_dd_d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/unit/domain/: test_snake.py
test/unit/domain/value_objects/: test_hp.py
test/unit/value_objects/: test_hp.py
